--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
+          <a href="https://github.com/kugelm/WBT201-Android/raw/master/WBT201.apk" id="download-zip" class="button"><span>Download latest version .apk</span></a>
           <a href="https://github.com/kugelm/WBT201-Android/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/kugelm/WBT201-Android/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/kugelm/WBT201-Android" id="view-on-github" class="button"><span>View on GitHub</span></a>
@@ -32,7 +33,7 @@
 
         <section id="main_content">
           <h1>
-<a id="wbt201-android" class="anchor" href="#wbt201-android" aria-hidden="true"><span class="octicon octicon-link"></span></a>WBT201-Android</h1>
+<a id="wbt201-android" class="anchor" href="#wbt201-android" aria-hidden="true"><span class="octicon octicon-link"></span></a>WBT201 App for Android</h1>
 
 <p>Simplistic ("One Button") App for Android. This app will read out the stored tracks on a Wintec G-Rays 2 GPS logger (known as WBT201) via Bluetooth.
 The app needs at least two Android permissions: Bluetooth (+ Bluetooth Admin) and for storing track data write access to the SD card.</p>
