--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/kugelm/WBT201-Android/raw/master/WBT201.apk" id="download-zip" class="button"><span>Download latest version .apk</span></a>
-          <a href="https://github.com/kugelm/WBT201-Android/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/kugelm/WBT201-Android/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/kugelm/WBT201-Android/raw/master/WBT201.apk" id="download-zip" class="button"><span>Latest Version</span></a>
           <a href="https://github.com/kugelm/WBT201-Android" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
