--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/kugelm/WBT201-Android/raw/master/WBT201.apk" id="download-zip" class="button"><span>Latest Version</span></a>
+          <a href="https://github.com/kugelm/WBT201-Android/raw/master/WBT201.apk" id="download-zip" class="button"><span>Get the APK</span></a>
           <a href="https://github.com/kugelm/WBT201-Android" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
