--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@ The app needs at least two Android permissions: Bluetooth (+ Bluetooth Admin) an
 
 <p>The app reuses source code from the GetWBT J2ME Java project. This is under GPL (c)2008. Many thanks to Dirkjan Krijnders.</p>
 
+<p>The directory chooser code is adapted from <a href="http://www.codeproject.com/Articles/547636/Android-Ready-to-use-simple-directory-chooser-dial">Gregory Shpitalnik</a> under COPL license model.</a> </p>
+
 <p>This project has been developed using Google Android Studio 0.5.7.</p>
 
 <p>Plans for future versions:</p>
 
 <ul>
-<li>read out and set configuration parameters on the logger</li>
+<li>read out and set configuration parameters on the logger (probably a bit too complictae in the moment...)</li>
 <li>alternative track directory (selectable) &lt;-- done in latest version, could be improved</li>
 <li>alternative track file formats</li>
 <li>visualize tracks from app's menu (own viewer, other map apps....)</li>
