--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ The app needs at least two Android permissions: Bluetooth (+ Bluetooth Admin) an
 
 <p>Tracks will be stored in GPX format. If a "osmand" directory is detected, the app will store track data in the subdirectory tracks there in order to allow OSMAnd to show them directly from Layer's menu.</p>
 
-<p>The app reuses source code from the GetWBT J2ME Java project. This is under GPL (c)2008. Many thanks to Dirkjan Krijnders.</p>
+<p>The app reuses source code from the <a href="http://www.krijnders.net/personal/computer/getwbt201">GetWBT J2ME</a> Java project. This is under GPL (c)2008. Many thanks to Dirkjan Krijnders.</p>
 
 <p>The directory chooser code is adapted from <a href="http://www.codeproject.com/Articles/547636/Android-Ready-to-use-simple-directory-chooser-dial">Gregory Shpitalnik</a> under COPL license model.</a> </p>
 
